Added about page and updated links to reference it.

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -74,7 +74,7 @@
         </div>
         <div id="main-content">
             <div id="main-content-header">
-                <h1>Oh... Hello.</h1>
+                <h1>About Me</h1>
             </div>
             <br />
 
@@ -82,10 +82,15 @@
                 <p class="cmd-prompt-line">C:\></p>
                 <p class="cmd-prompt-line">C:\></p>
                 <p class="cmd-prompt-line">C:\></p>
+                <p class="cmd-prompt-line">C:\></p>
             </div>
 
             <div id="next-div">
-                <p>Some text, lots of text. Text about me, Lorem Ipsum yada yada rada rada.</p>
+                <p>Our story begins... <br />
+                  Was he the most passionate programmer ever? No. <br />
+                  Did he make the best apps the world has ever seen? NOPE. <br />
+                  Did he give up? HELL NO!
+                </p>
             </div>
 
             <div id="last-div">
