Added the last couple of pages to the site. Updated the text to be somewhat more professional.

--- a/app/views/pages/projects.html.erb
+++ b/app/views/pages/projects.html.erb
@@ -74,7 +74,7 @@
         </div>
         <div id="main-content">
             <div id="main-content-header">
-                <h1>About Me</h1>
+                <h1>Projects</h1>
             </div>
             <br />
 
@@ -86,9 +86,7 @@
             </div>
 
             <div id="next-div">
-                <p>Our story begins... <br />
-                  Tell people about your journey, some background on yourself. <br />
-                  Maybe get deep. Go nuts.
+                <p> Show off some of your recent projects here. <br />
                 </p>
             </div>
 
