--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -74,7 +74,7 @@
         </div>
         <div id="main-content">
             <div id="main-content-header">
-                <h1>About Me</h1>
+                <h1>Contact Me</h1>
             </div>
             <br />
 
@@ -86,9 +86,7 @@
             </div>
 
             <div id="next-div">
-                <p>Our story begins... <br />
-                  Tell people about your journey, some background on yourself. <br />
-                  Maybe get deep. Go nuts.
+                <p> Have some contact details for yourself here.  Or have a form where people can email you directly from this page. <br />
                 </p>
             </div>
 
