--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -69,8 +69,8 @@
         <div id="Navbar">
             <%= link_to "~Home", root_path, class: "navbar-link leftmost-link" %>
             <%= link_to "$About", about_path, class: "navbar-link" %>
-            <%= link_to "$Projects", root_path, class: "navbar-link" %>
-            <%= link_to "$Contact", root_path, class: "navbar-link" %>
+            <%= link_to "$Projects", projects_path, class: "navbar-link" %>
+            <%= link_to "$Contact", contact_path, class: "navbar-link" %>
         </div>
         <div id="main-content">
             <div id="main-content-header">
@@ -85,7 +85,7 @@
             </div>
 
             <div id="next-div">
-                <p>Some text, lots of text. Text about me, Lorem Ipsum yada yada rada rada.</p>
+                <p>This page is where people get their first look at YOU, and can have whatever you want.</p>
             </div>
 
             <div id="last-div">
@@ -102,7 +102,7 @@
             });
 
             function adjustForSize() {
-                if ($(window).width() < 650) {
+                if ($(window).width() < 700) {
                     $("#cmd-prompt-div").css("display", "none");
                     $("#last-div").css("display", "none");
                     $("#next-div").css("float", "none");
